--- a/index.html
+++ b/index.html
@@ -5,8 +5,126 @@
     <title>HTML Academy: Нёрдс</title>
   </head>
   <body>
+  	<header class="main-header">
+  		<nav class="main-navigation">
+  			<a class="main-header-logo">
+  				<img src="img src="http://placehold.it/ width="150" height="100" alt="Логотип Нердс">
+  			</a>
+   			<ul class="site-navigation">
+  				<li><a href="studio.html">Студия</a></li>
+  				<li><a href="clients.html">Клиенты</a></li>
+  				<li><a href="shop.html">Магазин</a></li>
+  				<li><a href="contacts.html">Контакты</a></li>
+  			</ul>
+  			<ul class="login-to account">
+  				<li class="login-link">Корзина</li>
+  			</ul>
+   		</nav>
+   	</header>
+   	<main class="container">
+   		<h1 class="visiually-hidde">Слайдер</h1>
+   		<section class="slider">
+   			<ul class="slider-list">
+				<li class="slider-list-1"><b>Долго, дорого, скрупулузно</b></li>
+				<li class="slider-list-2"><p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p></li>
+				<li class="slider-list-3"><a href="shop.html"> УЗНАТЬ БОЛЬШЕ</a></li> 
+   			</ul>
+   		<h1 class="visiually-hidde">Виды работ</h1>
+   		<section class="types-of-jobs">
+   			<h3 class="visiually-hidde">Блок1 - Делаем Веб-сайты</h3>
+   			<ul class="web-site">
+				<li><img src="#" width="" height="" alt="Веб-Сайты"></li>
+   				<li><h4>ВЕБ-САЙТЫ</h4></li>
+   				<li><p>Мир никогда не будет прежним после того как увидит ващ сайт</p></li>
+   				<li><a class="button-order1" href="order-page1">Заказать</a></li>
+   			</ul>
+   			<h3 class="visiually-hidde">Блок2 - Делаем Приложения</h3>
+   			<ul class="aps">
+				<li><img src="#" width="" height="" alt="Приложения"></li>
+   				<li><h4>ПРИЛОЖЕНИЯ</h4></li>
+   				<li><p>Покорите топ-10 приложения в AppStore и Google Play</p></li>
+   				<li><a class="button-order2" href="order-page2">Заказать</a></li>
+   			</ul>
+			<h3 class="visiually-hidde">Блок3 - Делаем Презентации</h3>
+   			<ul class="presentation">
+				<li><img src="#" width="" height="" alt="Презентации"></li>
+   				<li><h4>ПРЕЗЕНТАЦИИ</h4></li>
+   				<li><p>Вы даже не подозреваете, насколько вы изумительны</p></li>
+   				<li><a class="button-order3" href="order-page3">Заказать</a></li>
+   			</ul>
+   		</section>
+   		<h1 class="visiually-hidde">Немного о студии "Нёрдс"</h1>
+   		<section class="in-short-about-nerds">
+   			<ul class="some-words-about-nerds">
+   			<li class="tagline-nerds"><b>Мы - маленькая, но гордая дизайн-студия из Краснодара</b></li>
+   			<li class="principle">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</li>
+   		</ul>
+   		<h6 class="development-orders">ВЫПОЛНЯЕМ ЗАКАЗЫ НА РАЗРАБОТКУ:</h6>
+   		<ul class="orders">
+   			<li class="orders-web-site">Веб-сайтов любой сложности</li>
+   			<li class="orders-apps">Мобильных приложений для iOS и Android</li>
+			<li class="orders-presentation">Слайдшоу и видео для корпоративных презентаций</li>
+   		</ul>
+   		</section>
+		<section class="block-from-2004-year">
+			<p>
+				<img class="logo-nerds" src="#" width="" height="" alt="logo-nerds">
+			</p>
+			<h5 class="from-2004-year">С 2004 ГОДА ЛЮБИМ ТОЧНОСТЬ ВО ВСЕМ</h5>
+			<ul class="statistics">
+				<li class="number">146<span class="percent">% </span>100<span class="percent">% <span class="percent">50<span class="percent">% </span></li>
+				<li class="value-number">Уровень самоотдачи Соблюение сроков Минимальная предоплата</li>
+			</ul>
+		</section>
+   		<h1 class="visiually-hidde">Добавляем выполненные Nerds работы</h1>
+   		<section class="partners">
+			<a href="https://htmlacademy.ru/intensive/htmlcss">
+				<img src="academy.img" width="" height="" alt="Логотип HTML Academy">
+			</a>
+			<a href="borodinski.html">
+				<img src="barbershop.img" width="" height="" alt="Логотип Барбершопа">
+			</a>
+			<a href="pink.html">
+				<img src="pink.img" width="" height="" alt="Логотип PINK">
+			</a>
+			<a href="mishka.html">
+				<img src="mishka.img" width="" height="" alt="Логотип MISHKA">
+			</a>
+		</section>
+		<section class="map">
+   		<h1 class="visiually-hidde">Добавляем карту</h1>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>
+			<!-- Здесь должна быть карта и форма-->
+   		<h1 class="visiually-hidde">Добавляем контакты Nerds</h1>		
+			<b>NERDS DESIGN STUDIO</b><br>
+			<p>
+				191186, Санкт-Петербург,<br>
+				ул. Конюшенная, д. 19/8
+			</p>
+			<p>
+				тел. +7(812)275-75-75
+			</p>
+			<a class="button-lette-to-nerds" href="contacts.html">НАПИШИТЕ НАМ</a>
+		</section>
+   	</main>
 
-  </body>
+   		<h1 class="visiually-hidde">Делаем футтер</h1>	   	
+   	<footer class="main-footer">
+   			<div class="fotter-social">
+   				<ul>
+					<li><a class="socail-button-vk" href="#">Вконтакте</a></li>
+					<li><a class="socail-buttom-facebook" href="#">Фейсбук</a></li>
+					<li><a class="socail-button-instagram" href="#">Инстаграм</a></li>
+				</ul>
+   			</div>
+   			<p class="fotter-2"><b>Давайте дружить, это выгодно</b></p>
+   			<p class="discount">Скидка 10% для друзей из социальных сетей</p>
+   	</footer>
+   		<section class="basket-login">
+   			<h2>Личный кабинет</h2>
+   			<p>Введите свой логин и пароль.</p>
+   			<!-- Здесь будет форма -->
+   			<span class="basket-close">Выход-X</span> 			
+   		</section>
+   	</body>
 </html>
