--- a/index.html
+++ b/index.html
@@ -8,63 +8,83 @@
   	<header class="main-header">
   		<nav class="main-navigation">
   			<a class="main-header-logo">
-  				<img src="img src="http://placehold.it/ width="150" height="100" alt="Логотип Нердс">
+  				<img src="img src="#" width="" height="" alt="Нёрдс">
   			</a>
    			<ul class="site-navigation">
   				<li><a href="studio.html">Студия</a></li>
   				<li><a href="clients.html">Клиенты</a></li>
-  				<li><a href="shop.html">Магазин</a></li>
+  				<li><a href="catalog.html">Магазин</a></li>
   				<li><a href="contacts.html">Контакты</a></li>
   			</ul>
-  			<ul class="login-to account">
-  				<li class="login-link">Корзина</li>
-  			</ul>
+  			<ul class="login-to-basket">
+  				<li class="basket-picture"><img src="#" width="" height="" alt="Корзина"></li>
+  				<li><a class=="basket-link" href="#">Корзина</a></li> 
+  			</ul> <!-- и все таки смущает меня этот список, правильно сделан?-->
    		</nav>
    	</header>
    	<main class="container">
-   		<h1 class="visiually-hidde">Слайдер</h1>
    		<section class="slider">
+   		<h1 class="visiually-hidden">Слайдер</h1>
    			<ul class="slider-list">
-				<li class="slider-list-1"><b>Долго, дорого, скрупулузно</b></li>
-				<li class="slider-list-2"><p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p></li>
-				<li class="slider-list-3"><a href="shop.html"> УЗНАТЬ БОЛЬШЕ</a></li> 
-   			</ul>
-   		<h1 class="visiually-hidde">Виды работ</h1>
-   		<section class="types-of-jobs">
-   			<h3 class="visiually-hidde">Блок1 - Делаем Веб-сайты</h3>
-   			<ul class="web-site">
-				<li><img src="#" width="" height="" alt="Веб-Сайты"></li>
-   				<li><h4>ВЕБ-САЙТЫ</h4></li>
-   				<li><p>Мир никогда не будет прежним после того как увидит ващ сайт</p></li>
-   				<li><a class="button-order1" href="order-page1">Заказать</a></li>
-   			</ul>
-   			<h3 class="visiually-hidde">Блок2 - Делаем Приложения</h3>
-   			<ul class="aps">
-				<li><img src="#" width="" height="" alt="Приложения"></li>
-   				<li><h4>ПРИЛОЖЕНИЯ</h4></li>
-   				<li><p>Покорите топ-10 приложения в AppStore и Google Play</p></li>
-   				<li><a class="button-order2" href="order-page2">Заказать</a></li>
-   			</ul>
-			<h3 class="visiually-hidde">Блок3 - Делаем Презентации</h3>
-   			<ul class="presentation">
-				<li><img src="#" width="" height="" alt="Презентации"></li>
-   				<li><h4>ПРЕЗЕНТАЦИИ</h4></li>
-   				<li><p>Вы даже не подозреваете, насколько вы изумительны</p></li>
-   				<li><a class="button-order3" href="order-page3">Заказать</a></li>
+				<li class="slider-list-1">
+					<img class="slider-list-1-picture" src="#" width="" height="" alt="Слайдер о дизайне">
+					<h2 class="slider-list-1-title">Долго, дорого, скрупулузно</h2>
+					<p class="slider-list-1-paragraph">Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
+					<a class="slider-list-1-button" href="catalog.html">Узнать больше</a>
+				</li>
+				<li class="slider-list-2">
+					<img class="slider-list-2-picture" src="#" width="" height="" alt="Слайдер о 222222">
+					<h2 class="slider-list-2-title">2, 2, 2</h2>
+					<p class="slider-list-2-paragraph">22222222222</p>
+					<a class="slider-list-2-button" href="#">Узнать больше</a>
+				</li>
+				<li class="slider-list-3">
+					<img class="slider-list-3-picture" src="#" width="" height="" alt="Слайдер о 33333333">
+					<h2 class="slider-list-3-title">3, 3, 3</h2>
+					<p class="slider-list-3-paragraph">3333333333</p>
+					<a class="slider-list-3-button" href="#">Узнать больше</a>
+				</li>			
    			</ul>
    		</section>
+   		<section class="section-types-of-jobs">
+ 	   		<h2 class="visiually-hidden">Виды работ</h2>
+   			<ul class="types-of-jobs-list">
+   				<li class="web-site">
+   					<h3 class="visiually-hidden">Блок1 - Делаем Веб-сайты</h3>
+					<img class="web-site-picture"	src="#" width="" height="" alt="Веб-Сайты">
+					<h4 class="web-site-title">Веб-сайты</h4>
+					<p class="web-site-paragraph">Мир никогда не будет прежним после того как увидит ващ сайт</p>
+					<a class="web-site-button-order" href="order-page1">Заказать</a>
+				</li>
+				<li class="aps">
+					<h3 class="visiually-hidden">Блок2 - Делаем Приложения</h3>
+					<img class="aps-picture" src="#" width="" height="" alt="Приложения">
+					<h4 class="aps-title">Приложения</h4>
+					<p class="aps-paragraph">Покорите топ-10 приложения в AppStore и Google Play</p>
+					<a class="aps-button-order" href="order-page2">Заказать</a>
+				</li>
+				<li class="presentation">
+					<h3 class="visiually-hidden">Блок3 - Делаем Презентации</h3>
+					<img class="presentation-picture" src="#" width="" height="" alt="Презентации">
+					<h4 class="presentation-title">Презентации</h4>
+					<p class="presentation-paragraph">Вы даже не подозреваете, насколько вы изумительны</p>
+					<a class="presentation-button-order" href="order-page3">Заказать</a>
+				</li>
+			</ul>
+		</section> <!-- Может тут вообщее section не нужен!? оставить просто в ul?? -->
+
    		<h1 class="visiually-hidde">Немного о студии "Нёрдс"</h1>
    		<section class="in-short-about-nerds">
    			<ul class="some-words-about-nerds">
-   			<li class="tagline-nerds"><b>Мы - маленькая, но гордая дизайн-студия из Краснодара</b></li>
-   			<li class="principle">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</li>
-   		</ul>
-   		<h6 class="development-orders">ВЫПОЛНЯЕМ ЗАКАЗЫ НА РАЗРАБОТКУ:</h6>
-   		<ul class="orders">
-   			<li class="orders-web-site">Веб-сайтов любой сложности</li>
-   			<li class="orders-apps">Мобильных приложений для iOS и Android</li>
-			<li class="orders-presentation">Слайдшоу и видео для корпоративных презентаций</li>
-   		</ul>
+   				<li class="tagline-nerds"><b>Мы - маленькая, но гордая дизайн-студия из Краснодара</b></li>
+   				<li class="principle">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</li>
+   			</ul>
+   			<h5 class="development-orders">ВЫПОЛНЯЕМ ЗАКАЗЫ НА РАЗРАБОТКУ:</h5>
+   			<ul class="orders">
+   				<li class="orders-web-site">Веб-сайтов любой сложности</li>
+   				<li class="orders-apps">Мобильных приложений для iOS и Android</li>
+				<li class="orders-presentation">Слайдшоу и видео для корпоративных презентаций</li>
+   			</ul>
    		</section>
 		<section class="block-from-2004-year">
 			<p>
