Повторно внес изменения по всей странице

--- a/index.html
+++ b/index.html
@@ -1,150 +1,159 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8">
-    <title>Нёрдс</title>
+	<meta charset="utf-8">
+	<title>Нёрдс</title>
   </head>
   <body>
-  	<header class="main-header">
-  		<nav class="main-navigation">
-  			<a class="main-header-logo">
-  				<img src="img src="#" width="" height="" alt="Нёрдс">
-  			</a>
-   			<ul class="site-navigation">
-  				<li><a href="studio.html">Студия</a></li>
-  				<li><a href="clients.html">Клиенты</a></li>
-  				<li><a href="catalog.html">Магазин</a></li>
-  				<li><a href="contacts.html">Контакты</a></li>
-  			</ul>
-  			<ul class="login-to-basket">
-  				<li class="basket-picture"><img src="#" width="" height="" alt="Корзина"></li>
-  				<li><a class=="basket-link" href="#">Корзина</a></li> 
-  			</ul> <!-- и все таки смущает меня этот список, правильно сделан?-->
-   		</nav>
-   	</header>
-   	<main class="container">
-   		<section class="slider">
-   		<h1 class="visiually-hidden">Слайдер</h1>
-   			<ul class="slider-list">
-				<li class="slider-list-1">
-					<img class="slider-list-1-picture" src="#" width="" height="" alt="Слайдер о дизайне">
-					<h2 class="slider-list-1-title">Долго, дорого, скрупулузно</h2>
-					<p class="slider-list-1-paragraph">Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
-					<a class="slider-list-1-button" href="catalog.html">Узнать больше</a>
+	<header class="main-header">
+		<nav class="main-navigation">
+			<a class="main-header-logo">
+				<img src="#" width="" height="" alt="Нёрдс">
+			</a>
+			<ul class="site-navigation">
+				<li><a href="studio.html">Студия</a></li>
+				<li><a href="clients.html">Клиенты</a></li>
+				<li><a href="catalog.html">Магазин</a></li>
+				<li><a href="contacts.html">Контакты</a></li>
+			</ul>
+			<ul class="login-to-basket">
+				<li><a class=="basket-link" href="#">Корзина</a></li> 
+			</ul>
+		</nav>
+	</header>
+	<main class="container">
+		<section class="sliders">
+			<h1 class="visiually-hidden">Слайдер</h1>
+			<ul class="sliders-list">
+				<li class="slider1">
+					<img src="#" width="" height="" alt="Два телефона">
+					<h3>Долго, дорого, скрупулузно</h3>
+					<p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+					<a href="#">Узнать больше</a>
 				</li>
-				<li class="slider-list-2">
-					<img class="slider-list-2-picture" src="#" width="" height="" alt="Слайдер о 222222">
-					<h2 class="slider-list-2-title">2, 2, 2</h2>
-					<p class="slider-list-2-paragraph">22222222222</p>
-					<a class="slider-list-2-button" href="#">Узнать больше</a>
+				<li class="slider2">
+					<img src="#" width="" height="" alt="Два компьютера">
+					<h3>Любим математику как никто другой</h3>
+					<p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+					<a href="catalog.html">Узнать больше</a>
 				</li>
-				<li class="slider-list-3">
-					<img class="slider-list-3-picture" src="#" width="" height="" alt="Слайдер о 33333333">
-					<h2 class="slider-list-3-title">3, 3, 3</h2>
-					<p class="slider-list-3-paragraph">3333333333</p>
-					<a class="slider-list-3-button" href="#">Узнать больше</a>
+				<li class="slider3">
+					<img src="#" width="" height="" alt="Планшет и телефон">
+					<h3>Только ночь, только хардкор</h3>
+					<p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.
+					</p>
+					<a href="catalog.html">Узнать больше</a>
 				</li>			
-   			</ul>
-   		</section>
-   		<section class="section-types-of-jobs">
- 	   		<h2 class="visiually-hidden">Виды работ</h2>
-   			<ul class="types-of-jobs-list">
-   				<li class="web-site">
-   					<h3 class="visiually-hidden">Блок1 - Делаем Веб-сайты</h3>
-					<img class="web-site-picture"	src="#" width="" height="" alt="Веб-Сайты">
-					<h4 class="web-site-title">Веб-сайты</h4>
-					<p class="web-site-paragraph">Мир никогда не будет прежним после того как увидит ващ сайт</p>
-					<a class="web-site-button-order" href="order-page1">Заказать</a>
+			</ul>
+		</section>
+		<section class="services">
+			<h2 class="visiually-hidden">Виды работ</h2>
+			<ul class="services-list">
+				<li class="web-site">
+					<img src="#" width="" height="" alt="Веб-Сайты">
+					<h3 >Веб-сайты</h3>
+					<p>Мир никогда не будет прежним после того как увидит ващ сайт!</p>
+					<a href="catalog.html">Заказать</a>
 				</li>
 				<li class="aps">
-					<h3 class="visiually-hidden">Блок2 - Делаем Приложения</h3>
-					<img class="aps-picture" src="#" width="" height="" alt="Приложения">
-					<h4 class="aps-title">Приложения</h4>
-					<p class="aps-paragraph">Покорите топ-10 приложения в AppStore и Google Play</p>
-					<a class="aps-button-order" href="order-page2">Заказать</a>
+					<img src="#" width="" height="" alt="Приложения">
+					<h3>Приложения</h3>
+					<p>Покорите топ-10 приложения в AppStore и Google Play</p>
+					<a href="catalog.html">Заказать</a>
 				</li>
 				<li class="presentation">
-					<h3 class="visiually-hidden">Блок3 - Делаем Презентации</h3>
-					<img class="presentation-picture" src="#" width="" height="" alt="Презентации">
-					<h4 class="presentation-title">Презентации</h4>
-					<p class="presentation-paragraph">Вы даже не подозреваете, насколько вы изумительны</p>
-					<a class="presentation-button-order" href="order-page3">Заказать</a>
+					<img src="#" width="" height="" alt="Презентации">
+					<h3>Презентации</h3>
+					<p>Вы даже не подозреваете, насколько вы изумительны!</p>
+					<a href="catalog.html">Заказать</a>
 				</li>
 			</ul>
-		</section> <!-- Может тут вообщее section не нужен!? оставить просто в ul?? -->
-
-   		<h1 class="visiually-hidde">Немного о студии "Нёрдс"</h1>
-   		<section class="in-short-about-nerds">
-   			<ul class="some-words-about-nerds">
-   				<li class="tagline-nerds"><b>Мы - маленькая, но гордая дизайн-студия из Краснодара</b></li>
-   				<li class="principle">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</li>
-   			</ul>
-   			<h5 class="development-orders">ВЫПОЛНЯЕМ ЗАКАЗЫ НА РАЗРАБОТКУ:</h5>
-   			<ul class="orders">
-   				<li class="orders-web-site">Веб-сайтов любой сложности</li>
-   				<li class="orders-apps">Мобильных приложений для iOS и Android</li>
-				<li class="orders-presentation">Слайдшоу и видео для корпоративных презентаций</li>
-   			</ul>
-   		</section>
+		</section> 
+		<section class="about-nerds">
+			<h1 class="visiually-hidden">Немного о студии "Нёрдс"</h1> 		
+			<p class="slogan-nerds"><b>Мы - маленькая, но гордая дизайн-студия из Краснодара.</b></p>
+			<p class="principle-nerds">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+			<h5 class="orders-list-paragraph">выполняем заказы на разработку:</h5>
+			<ul class="orders-list">
+				<li>Веб-сайтов любой сложности</li>
+				<li>Мобильных приложений для iOS и Android</li>
+				<li>Слайдшоу и видео для корпоративных презентаций</li>
+			</ul>
+		</section>
 		<section class="block-from-2004-year">
 			<p>
-				<img class="logo-nerds" src="#" width="" height="" alt="logo-nerds">
+				<img class="logo-nerds" src="#" width="" height="" alt="Логотип Нёрдс">
 			</p>
-			<h5 class="from-2004-year">С 2004 ГОДА ЛЮБИМ ТОЧНОСТЬ ВО ВСЕМ</h5>
+			<h5 class="from-2004-year">с 2004 года любим точность во всем:</h5>
 			<ul class="statistics">
 				<li class="number">146<span class="percent">% </span>100<span class="percent">% <span class="percent">50<span class="percent">% </span></li>
 				<li class="value-number">Уровень самоотдачи Соблюение сроков Минимальная предоплата</li>
 			</ul>
 		</section>
-   		<h1 class="visiually-hidde">Добавляем выполненные Nerds работы</h1>
-   		<section class="partners">
-			<a href="https://htmlacademy.ru/intensive/htmlcss">
-				<img src="academy.img" width="" height="" alt="Логотип HTML Academy">
-			</a>
-			<a href="borodinski.html">
-				<img src="barbershop.img" width="" height="" alt="Логотип Барбершопа">
-			</a>
-			<a href="pink.html">
-				<img src="pink.img" width="" height="" alt="Логотип PINK">
-			</a>
-			<a href="mishka.html">
-				<img src="mishka.img" width="" height="" alt="Логотип MISHKA">
-			</a>
+		<h1 class="visiually-hidden">Добавляем выполненные Nerds работы</h1>
+		<section class="partners-section">
+			<ul class="partners-list">
+				<a href="https://htmlacademy.ru">
+					<img src="#" width="" height="" alt="HTML Academy">
+				</a>
+				<a href="borodinski.html">
+					<img src="#" width="" height="" alt="Барбершоп">
+				</a>
+				<a href="pink.html">
+					<img src="#" width="" height="" alt="PINK">
+				</a>
+				<a href="mishka.html">
+					<img src="#" width="" height="" alt="MISHKA">
+				</a>
+			</ul>
 		</section>
-		<section class="map">
-   		<h1 class="visiually-hidde">Добавляем карту</h1>
-
-			<!-- Здесь должна быть карта и форма-->
-   		<h1 class="visiually-hidde">Добавляем контакты Nerds</h1>		
-			<b>NERDS DESIGN STUDIO</b><br>
+	</main>
+	<footer class="main-footer">   	
+		<div class="map">
+			<h1 class="visiually-hidden">Добавляем карту</h1>
+			<img class="map-picture" src="#" width="" height="Contributing.md" alt="Карта c адресов Нердс">
+			<img class="marker-map"	src="#" width="" height="" alt="Маркер на карте">
+		</div>			
+			<h1 class="visiually-hidden">Добавляем контакты Nerds</h1>
+		<div class="contacts">	
+			<h5>NERDS DESIGN STUDIO</h5>
 			<p>
 				191186, Санкт-Петербург,<br>
 				ул. Конюшенная, д. 19/8
 			</p>
-			<p>
-				тел. +7(812)275-75-75
-			</p>
-			<a class="button-lette-to-nerds" href="contacts.html">НАПИШИТЕ НАМ</a>
-		</section>
-   	</main>
-
-   		<h1 class="visiually-hidde">Делаем футтер</h1>	   	
-   	<footer class="main-footer">
-   			<div class="fotter-social">
-   				<ul>
-					<li><a class="socail-button-vk" href="#">Вконтакте</a></li>
-					<li><a class="socail-buttom-facebook" href="#">Фейсбук</a></li>
-					<li><a class="socail-button-instagram" href="#">Инстаграм</a></li>
-				</ul>
-   			</div>
-   			<p class="fotter-2"><b>Давайте дружить, это выгодно</b></p>
-   			<p class="discount">Скидка 10% для друзей из социальных сетей</p>
-   	</footer>
-   		<section class="basket-login">
-   			<h2>Личный кабинет</h2>
-   			<p>Введите свой логин и пароль.</p>
-   			<!-- Здесь будет форма -->
-   			<span class="basket-close">Выход-X</span> 			
-   		</section>
-   	</body>
+			<p>тел. +7(812)275-75-75</p>
+			<a class="button-letter-to-nerds" href="#">напишите нам</a>
+		</div>						
+		<div class="fotter-social">
+			<ul>
+				<li><a class="button-vk" href="#">Вконтакте</a></li>
+				<li><a class="button-facebook" href="#">Фейсбук</a></li>
+				<li><a class="button-instagram" href="#">Инстаграм</a></li>
+			</ul>
+		</div class="fotter-discount">
+			<b>Давайте дружить, это выгодно</b>
+			<p>Скидка 10% для друзей из социальных сетей</p>
+	</footer>
+		<form class="letter-to-nerds" action="#" method="post">
+			<h2>Напишите нам</h2>
+			<span class="letter-to-nerds-close">x</span> <!-- почти уверен, что неправильно, таким образом я хотел отоброзить элемент закрытия формы? -->
+			<div class="name-email">
+				<label>
+					<b>Ваше имя:</b> 
+					<input type="text" name="login" id="login" placeholder="Имя Фамилия"> <!-- вообще нужен ли id? -->
+				</label>
+				<label>
+					<b>Ваш e-mail:</b> 	
+					<input type="email" name="email" id="email" placeholder="email@example.com"> 
+				</label>
+			</div> <!-- что в таких случаях лучше применять div или p?? -->
+			<div class="text-of-the-letter">
+				<label>
+					<b>Текст письма:</b><br>
+					<textarea name="letter" rows="4" cols="" placeholder="В свободной форме" id="letter"></textarea>
+				</label>
+			</div>		
+			<a href="#">отправить</a> <!--а можно ли такие элементы делать с помощью button? -->
+		</form>
+	</body>
 </html>
