исправил мелки опечатки, которые не заметил.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<li><a href="contacts.html">Контакты</a></li>
 			</ul>
 			<ul class="login-to-basket">
-				<li><a class=="basket-link" href="#">Корзина</a></li> 
+				<li><a class="basket-link" href="#">Корзина</a></li> 
 			</ul>
 		</nav>
 	</header>
@@ -111,12 +111,12 @@
 	<footer class="main-footer">   	
 		<div class="map">
 			<h1 class="visiually-hidden">Добавляем карту</h1>
-			<img class="map-picture" src="#" width="" height="Contributing.md" alt="Карта c адресов Нердс">
+			<img class="map-picture" src="#" width="" height="Contributing.md" alt="Карта c адресом Нердс">
 			<img class="marker-map"	src="#" width="" height="" alt="Маркер на карте">
 		</div>			
 			<h1 class="visiually-hidden">Добавляем контакты Nerds</h1>
 		<div class="contacts">	
-			<h5>NERDS DESIGN STUDIO</h5>
+			<h5>nerds design studio</h5>
 			<p>
 				191186, Санкт-Петербург,<br>
 				ул. Конюшенная, д. 19/8
@@ -124,13 +124,13 @@
 			<p>тел. +7(812)275-75-75</p>
 			<a class="button-letter-to-nerds" href="#">напишите нам</a>
 		</div>						
-		<div class="fotter-social">
+		<div class="footer-social">
 			<ul>
 				<li><a class="button-vk" href="#">Вконтакте</a></li>
 				<li><a class="button-facebook" href="#">Фейсбук</a></li>
 				<li><a class="button-instagram" href="#">Инстаграм</a></li>
 			</ul>
-		</div class="fotter-discount">
+		</div class="footer-discount">
 			<b>Давайте дружить, это выгодно</b>
 			<p>Скидка 10% для друзей из социальных сетей</p>
 	</footer>
