Внес изменения в catalog.html согласно всем замечаниям.  Сортировка и фильтры не готовы.

--- a/catalog.html
+++ b/catalog.html
@@ -1,129 +1,140 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8">
-    <title>Каталог Нёрдс</title>
+	<meta charset="utf-8">
+	<title>Каталог Нёрдс</title>
   </head>
   <body>
-  	<header class="main-header">
-  		<nav class="main-navigation">
-  			<a class="main-header-logo" href="index.html">
-  				<img src="img src="http://placehold.it/ width="" height="" alt="Логотип Нердс">
-  			</a>
-   			<ul class="site-navigation">
-  				<li><a href="studio.html">Студия</a></li>
-  				<li><a href="clients.html">Клиенты</a></li>
-  				<li><a class="site-navigation-current" href="site-navigation-shop">Магазин</a></li>
-  				<li><a href="contacts.html">Контакты</a></li>
-  			</ul>
-  			<ul class="login-to account">
-  				<li class="login-link">Корзина</li>
-  			</ul>
-   		</nav>
-   	</header>
-    <main class="container">
-      <h1 class="page-title">Магазин готовых шаблонов</h1>
-      <section class="filters">
-      <h1 class="visiually-hidde">Фильтры</h1>
-        <!--Форма будет поздее -->
-      </section>
-
-      <section class="sot">
-      <h1 class="visiually-hidde">Сортировка шаблонов</h1>
-        <ul class="sort-list">
-          <li class="price">СТОИМОСТЬ</li>
-          <li class="sot2">СОРТИРОВАТЬ</li>
-          <li class="sort-price">ПО ЦЕНЕ</li>
-          <li class="sort-type">ПО ТИПУ</li>
-          <li class="sort-name">ПО НАЗВАНИЮ</li> 
-        </ul>    
-      </section>
-      <section class="templates">
-      <h2 class="visiually-hidde">Каталог шаблонов</h2>
-        <ul class="template-list">
-        <li class="sedona-item">
-          <h3>
-            <a href="template-sedona.html"><b>Седона</b></a>
-          </h3>
-          <p class="about-sedona">Инофрмационный сайт<br>для туристов</p>
-          <p class="template-sedona-image">
-            <a href="template-sedona.html">
-              <img src="sedona-image.jpg" width="" height="" alt="Шаблон Седона"></a>
-          </p>
-          <p class="sedona-button">
-            <a href="#">9900 РУБ.</a>
-          </p>
-        </li>             
-        <li class="pink-item">
-          <a href="template-pink.html">
-            <img src="pink-image.jpg" width="" height="" alt="Шаблон Пинк">
-          </a>
-        </li>
-        <li class="barbershop-item">
-          <a href="template-barbershop.html">
-            <img src="barbershop-image.jpg" width="" height="" alt="Шаблон Барбершоп">
-          </a>
-        </li>
-        <li class="handmade-item">
-          <a href="template-handmade.html">
-            <img src="handmade-image.jpg" width="" height="" alt="Шаблон Милых штук">
-          </a>
-        </li>       
-        <li class="service-item">
-          <a href="template-service.html">
-            <img src="service-image.jpg" width="" height="" alt="Шаблон Севрисного центра">
-          </a>
-        </li>
-        <li class="kvas-item">
-          <a href="template-kvas.html">
-            <img src="kvas-image.jpg" width="" height="" alt="Шаблон Крафтового кваса">
-          </a>
-        </li>
-      </ul>
-      </section>        
-        <h1 class="visiually-hidde">Сраницы сайта</h1>
-      <ul class="pages">
-        <li class="page1"><a href="page1.html">1</a></li>
-        <li class="page2"><a href="page2.html">2</a></li>
-        <li class="page3"><a href="page3.html">3</a></li>
-        <li class="next-page"><a href="next-page.html">СЛЕДУЮЩАЯ</a></li>
-      </ul>
-    </main>
-        <p>Репозиторий создан для обучения на интенсивном онлайн-курсе 
-          <a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>.
-        </p>
-      <section class="map">  
-        <h1 class="visiually-hidde">Добавляем карту</h1>
-        <!-- Здесь должна быть карта и форма-->      
-        <h1 class="visiually-hidde">Добавляем контакты Nerds</h1>   
-        <b>NERDS DESIGN STUDIO</b><br>
-        <p>
-          191186, Санкт-Петербург,<br>
-          ул. Конюшенная, д. 19/8
-        </p>
-        <p>
-          тел. +7(812)275-75-75
-        </p>
-        <a class="button-lette-to-nerds" href="contacts.html">НАПИШИТЕ НАМ</a>
-      </section>
-      <h1 class="visiually-hidde">Делаем футтер</h1>      
-    <footer class="main-footer">
-        <div class="fotter-social">
-          <ul>
-          <li><a class="socail-button-vk" href="#">Вконтакте</a></li>
-          <li><a class="socail-buttom-facebook" href="#">Фейсбук</a></li>
-          <li><a class="socail-button-instagram" href="#">Инстаграм</a></li>
-        </ul>
-        </div>
-        <p class="fotter-2"><b>Давайте дружить, это выгодно</b></p>
-        <p class="discount">Скидка 10% для друзей из социальных сетей</p>
-    </footer>
-      <section class="basket-login">
-        <h2>Личный кабинет</h2>
-        <p>Введите свой логин и пароль.</p>
-        <!-- Здесь будет форма -->
-        <span class="basket-close">Выход-X</span>       
-      </section>
+	<header class="main-header">
+		<nav class="main-navigation">
+			<h1 class="visiually-hidden">Навигационные элементы страницы</h1>
+			<a class="main-header-logo" href="index.html">
+				<img src="#" width="" height="" alt="Логотип Нердс">
+			</a>
+			<ul class="site-navigation">
+				<li><a href="studio.html">Студия</a></li>
+				<li><a href="clients.html">Клиенты</a></li>
+				<li><a class="site-navigation-current" href="catalog.html">Магазин</a></li>
+				<li><a href="contacts.html">Контакты</a></li>
+			</ul>
+			<ul class="login-to account">
+				<li><a class="basket-link" href="#">Корзина</a></li> 
+			</ul>
+		</nav>
+	</header>
+	<main class="container">
+		<h2 class="page-title">Магазин готовых шаблонов</h2>
+		<section class="filters">
+			<h1 class="visiually-hidden">Фильтры</h1>
+			<!--Форма будет позднее -->
+		</section>
+		<section class="sort-section">
+			<h1 class="visiually-hidden">Сортировка шаблонов</h1>
+			<b>сортировать</b>
+			<ul class="sort-list">
+				<li class="sort-price">по цене</li>
+				<li class="sort-type">по типу</li>
+				<li class="sort-name">по названию</li> 
+			</ul>
+		</section>
+		<section class="templates">
+			<h1 class="visiually-hidden">Каталог шаблонов</h1>
+			<ul class="template-list">
+				<li class="sedona-item">
+					<h5><a href="#"><b>sedona</b></a></h5>
+					<p class="about">Инофрмационный сайт<br>для туристов</p> <!--в данном случая будем стилизовать h5? -->
+					<p class="image">
+						<a href="#"><img src="#" width="" height="" alt="Шаблон Седона"></a>
+					</p> <!--а тут как класс? -->
+					<p class="button">
+						<a href="#">9900 руб.</a>
+					</p>
+				</li>
+				<li class="pink-item">
+					<h5><a href="#"><b>pink app</b></a></h5>
+					<p class="about">Продуктовый лендинг<br> приложения для iOS и Android</p>
+					<p class="image">
+						<a href="#"><img src="#" width="" height="" alt="Шаблон Pink app"></a>
+					</p>
+					<p class="button">
+						<a href="#">9900 руб.</a>
+					</p>
+				</li>
+				<li class="barbershop-item">
+					<h5><a href="#"><b>barbershop</b></a></h5>
+					<p class="about">Сайт салоны красоты.<br>Для мужчин, да</p>
+					<p class="image">
+						<a href="#"><img src="#" width="" height="" alt="Шаблон Барбершопа"></a>
+					</p>
+					<p class="button">
+						<a href="#">9900 руб.</a>
+					</p>
+				</li>
+				<li class="mishka-item">
+					<h5><a href="#"><b>mishka</b></a></h5>
+					<p class="about">Интернет-магазин<br>вязаных игрушек</p>
+					<p class="image">
+						<a href="#"><img src="#" width="" height="" alt="Шаблон интернет-магазина вязаных игрушек"></a>
+					</p>
+					<p class="button">
+						<a href="#">9900 руб.</a>
+					</p>
+				</li> 				
+				<li class="aplus-item">
+					<h5><a href="#"><b>a plus</b></a></h5>
+					<p class="about">Лендинг курсов повышения<br>квалификации</p>
+					<p class="image">
+						<a href="#"><img src="#" width="" height="" alt="Шаблон A plus"></a>
+					</p>
+					<p class="button">
+						<a href="#">9900 руб.</a>
+					</p>
+				</li>
+				<li class="kvass-item">
+					<h5><a href="#"><b>a plus</b></a></h5>
+					<p class="about">Промо-сайт производителя<br>крафтового кваса</p>
+					<p class="image">
+						<a href="#"><img src="#" width="" height="" alt="Шаблон Промо-сайта производителя крафтового кваса"></a>
+					</p>
+					<p class="button">
+						<a href="#">9900 руб.</a>
+					</p>
+				</li>
+			</ul>
+		</section>
+		<ul class="pagination-list">
+			<h1 class="visiually-hidden">Делаем ссылки на сраницы каталога</h1>
+			<li class="pagination-item-current"><a href="#">1</a></li>
+			<li class="pagination-item"><a href="#">2</a></li>
+			<li class="pagination-item"><a href="#">3</a></li>
+			<li class="pagination-item"><a href="#">следующая</a></li>
+		</ul> <!-- не надо загонять в section? -->
+	</main>
+	<footer class="main-footer">   	
+		<div class="map">
+			<h1 class="visiually-hidden">Добавляем карту</h1>
+			<img class="map-picture" src="#" width="" height="Contributing.md" alt="Карта c адресом Нердс">
+			<img class="marker-map"	src="#" width="" height="" alt="Маркер на карте">
+		</div>			
+			<h1 class="visiually-hidden">Добавляем контакты Nerds</h1>
+		<div class="contacts">	
+			<h5>nerds design studio</h5> 
+			<p>
+				191186, Санкт-Петербург,<br>
+				ул. Конюшенная, д. 19/8
+			</p>
+			<p>тел. +7(812)275-75-75</p>
+			<a class="button-letter-to-nerds" href="#">напишите нам</a>
+		</div>						
+		<div class="footer-social">
+			<ul>
+				<li><a class="button-vk" href="#">Вконтакте</a></li>
+				<li><a class="button-facebook" href="#">Фейсбук</a></li>
+				<li><a class="button-instagram" href="#">Инстаграм</a></li>
+			</ul>
+		</div class="footer-discount">
+			<b>Давайте дружить, это выгодно</b>
+			<p>Скидка 10% для друзей из социальных сетей</p>
+	</footer>
   </body>
 </html>
-  
