Внес изменения в index.html №2

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-	<meta charset="utf-8">
-	<title>Нёрдс</title>
-  </head>
-  <body>
+	<head>
+		<meta charset="utf-8">
+		<title>Нёрдс</title>
+	</head>
+	<body>
 	<header class="main-header">
 		<nav class="main-navigation">
 			<a class="main-header-logo">
@@ -22,12 +22,13 @@
 		</nav>
 	</header>
 	<main class="container">
+		<h1 class="visually-hidden">Cтудия дизайна Nerds</h1>
 		<section class="sliders">
-			<h1 class="visiually-hidden">Слайдер</h1>
+			<h2 class="visually-hidden">Слайдер</h2>
 			<ul class="sliders-list">
 				<li class="slider1">
 					<img src="#" width="" height="" alt="Два телефона">
-					<h3>Долго, дорого, скрупулузно</h3>
+					<h3>Долго, дорого, скрупулезно</h3> <!-- а здесь не h2 надо сделать? -->
 					<p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
 					<a href="#">Узнать больше</a>
 				</li>
@@ -40,25 +41,24 @@
 				<li class="slider3">
 					<img src="#" width="" height="" alt="Планшет и телефон">
 					<h3>Только ночь, только хардкор</h3>
-					<p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.
-					</p>
+					<p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
 					<a href="catalog.html">Узнать больше</a>
-				</li>			
+				</li>
 			</ul>
 		</section>
 		<section class="services">
-			<h2 class="visiually-hidden">Виды работ</h2>
+			<h2 class="visually-hidden">Виды работ</h2>
 			<ul class="services-list">
 				<li class="web-site">
 					<img src="#" width="" height="" alt="Веб-Сайты">
 					<h3 >Веб-сайты</h3>
-					<p>Мир никогда не будет прежним после того как увидит ващ сайт!</p>
+					<p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
 					<a href="catalog.html">Заказать</a>
 				</li>
 				<li class="aps">
 					<img src="#" width="" height="" alt="Приложения">
 					<h3>Приложения</h3>
-					<p>Покорите топ-10 приложения в AppStore и Google Play</p>
+					<p>Покорите топ-10 приложений в AppStore и Google Play</p>
 					<a href="catalog.html">Заказать</a>
 				</li>
 				<li class="presentation">
@@ -69,70 +69,84 @@
 				</li>
 			</ul>
 		</section> 
-		<section class="about-nerds">
-			<h1 class="visiually-hidden">Немного о студии "Нёрдс"</h1> 		
-			<p class="slogan-nerds"><b>Мы - маленькая, но гордая дизайн-студия из Краснодара.</b></p>
-			<p class="principle-nerds">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
-			<h5 class="orders-list-paragraph">выполняем заказы на разработку:</h5>
-			<ul class="orders-list">
+		<section class="about">
+			<h2 class="visually-hidden">О студии</h2> 		
+			<p class="slogan"><b>Мы - маленькая, но гордая дизайн-студия из Краснодара.</b></p> <!-- тут же класс оставляем?! -->
+			<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+			<h4>выполняем заказы на разработку:</h4>
+			<ul class="orders">
 				<li>Веб-сайтов любой сложности</li>
 				<li>Мобильных приложений для iOS и Android</li>
 				<li>Слайдшоу и видео для корпоративных презентаций</li>
 			</ul>
 		</section>
 		<section class="block-from-2004-year">
-			<p>
-				<img class="logo-nerds" src="#" width="" height="" alt="Логотип Нёрдс">
-			</p>
-			<h5 class="from-2004-year">с 2004 года любим точность во всем:</h5>
+			<p><img class="logo-nerds" src="#" width="" height="" alt="Логотип Нёрдс"></p>
+			<h4>с 2004 года любим точность во всем:</h4>
 			<ul class="statistics">
-				<li class="number">146<span class="percent">% </span>100<span class="percent">% <span class="percent">50<span class="percent">% </span></li>
-				<li class="value-number">Уровень самоотдачи Соблюение сроков Минимальная предоплата</li>
+				<li>
+					146<span class="percent">%</span><br>
+					Уровень самоотдачи
+				</li>
+				<li>
+					100<span class="percent">%</span><br>
+					Соблюдение сроков
+				</li>
+				<li>
+					50<span class="percent">%</span><br>
+					Минимальная предоплата
+				</li>
 			</ul>
 		</section>
-		<h1 class="visiually-hidden">Добавляем выполненные Nerds работы</h1>
 		<section class="partners-section">
+			<h2 class="visually-hidden">Работы</h2>
 			<ul class="partners-list">
-				<a href="https://htmlacademy.ru">
-					<img src="#" width="" height="" alt="HTML Academy">
-				</a>
-				<a href="borodinski.html">
-					<img src="#" width="" height="" alt="Барбершоп">
-				</a>
-				<a href="pink.html">
-					<img src="#" width="" height="" alt="PINK">
-				</a>
-				<a href="mishka.html">
-					<img src="#" width="" height="" alt="MISHKA">
-				</a>
+				<li>
+					<a href="https://htmlacademy.ru">
+						<img src="#" width="" height="" alt="HTML Academy">
+					</a>
+				</li>
+				<li>
+					<a href="borodinski.html">
+						<img src="#" width="" height="" alt="Барбершоп">
+					</a>
+				</li>
+				<li>
+					<a href="pink.html">
+						<img src="#" width="" height="" alt="PINK">
+					</a>
+				</li>
+				<li>
+					<a href="mishka.html">
+						<img src="#" width="" height="" alt="MISHKA">
+					</a>
+				</li>
 			</ul>
 		</section>
 	</main>
-	<footer class="main-footer">   	
+	<footer class="main-footer">
 		<div class="map">
-			<h1 class="visiually-hidden">Добавляем карту</h1>
-			<img class="map-picture" src="#" width="" height="Contributing.md" alt="Карта c адресом Нердс">
-			<img class="marker-map"	src="#" width="" height="" alt="Маркер на карте">
+			<h2 class="visually-hidden">Карта</h2>
+			<img class="map-picture" src="#" width="" height="" alt="Карта">
 		</div>			
-			<h1 class="visiually-hidden">Добавляем контакты Nerds</h1>
-		<div class="contacts">	
-			<h5>nerds design studio</h5>
-			<p>
-				191186, Санкт-Петербург,<br>
-				ул. Конюшенная, д. 19/8
-			</p>
+		<div class="contacts">
+			<h2 class="visually-hidden">Контакты</h2>
+			<h4>nerds design studio</h4>
+			<p>191186, Санкт-Петербург,<br>ул. Конюшенная, д. 19/8</p>
 			<p>тел. +7(812)275-75-75</p>
-			<a class="button-letter-to-nerds" href="#">напишите нам</a>
-		</div>						
+			<a class="button-letter-to-nerds" href="#">Напишите нам</a>
+		</div>
 		<div class="footer-social">
 			<ul>
 				<li><a class="button-vk" href="#">Вконтакте</a></li>
 				<li><a class="button-facebook" href="#">Фейсбук</a></li>
 				<li><a class="button-instagram" href="#">Инстаграм</a></li>
 			</ul>
-		</div class="footer-discount">
+		</div>
+		<div class="footer-discount">
 			<b>Давайте дружить, это выгодно</b>
 			<p>Скидка 10% для друзей из социальных сетей</p>
+		</div>
 	</footer>
 		<form class="letter-to-nerds" action="#" method="post">
 			<h2>Напишите нам</h2>
@@ -152,8 +166,8 @@
 					<b>Текст письма:</b><br>
 					<textarea name="letter" rows="4" cols="" placeholder="В свободной форме" id="letter"></textarea>
 				</label>
-			</div>		
-			<a href="#">отправить</a> <!--а можно ли такие элементы делать с помощью button? -->
+			</div>
+			<a href="#">Отправить</a> <!--а можно ли такие элементы делать с помощью button? -->
 		</form>
 	</body>
 </html>
