--- a/catalog.html
+++ b/catalog.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-	<meta charset="utf-8">
-	<title>Каталог Нёрдс</title>
-  </head>
-  <body>
+	<head>
+		<meta charset="utf-8">
+		<title>Каталог Нёрдс</title>
+	</head>
+	<body>
 	<header class="main-header">
 		<nav class="main-navigation">
-			<h1 class="visiually-hidden">Навигационные элементы страницы</h1>
+			<h2 class="visually-hidden">Разделы сайта</h2>
 			<a class="main-header-logo" href="index.html">
 				<img src="#" width="" height="" alt="Логотип Нердс">
 			</a>
@@ -17,19 +17,19 @@
 				<li><a class="site-navigation-current" href="catalog.html">Магазин</a></li>
 				<li><a href="contacts.html">Контакты</a></li>
 			</ul>
-			<ul class="login-to account">
-				<li><a class="basket-link" href="#">Корзина</a></li> 
+			<ul class="basket-link">
+				<li><a href="#">Корзина</a></li> 
 			</ul>
 		</nav>
 	</header>
 	<main class="container">
-		<h2 class="page-title">Магазин готовых шаблонов</h2>
+		<h1>Магазин готовых шаблонов</h1>
 		<section class="filters">
-			<h1 class="visiually-hidden">Фильтры</h1>
-			<!--Форма будет позднее -->
+			<h2 class="visually-hidden">Фильтры</h2>
+			<!--Форма будет позже -->
 		</section>
-		<section class="sort-section">
-			<h1 class="visiually-hidden">Сортировка шаблонов</h1>
+		<section class="sort">
+			<h2 class="visually-hidden">Сортировка шаблонов</h2>
 			<b>сортировать</b>
 			<ul class="sort-list">
 				<li class="sort-price">по цене</li>
@@ -38,20 +38,20 @@
 			</ul>
 		</section>
 		<section class="templates">
-			<h1 class="visiually-hidden">Каталог шаблонов</h1>
+			<h2 class="visually-hidden">Каталог шаблонов</h2>
 			<ul class="template-list">
 				<li class="sedona-item">
-					<h5><a href="#"><b>sedona</b></a></h5>
-					<p class="about">Инофрмационный сайт<br>для туристов</p> <!--в данном случая будем стилизовать h5? -->
+					<h4><a href="#">sedona</a></h4>
+					<p class="about">Инофрмационный сайт<br>для туристов</p>
 					<p class="image">
 						<a href="#"><img src="#" width="" height="" alt="Шаблон Седона"></a>
-					</p> <!--а тут как класс? -->
-					<p class="button">
-						<a href="#">9900 руб.</a>
+					</p> <!--а может быть тут лучше присвоить класс ссылке и убрать параграф!? -->
+					<p class="button"> 
+						<a href="#">9900 руб.</a> <!-- и тут? -->
 					</p>
 				</li>
 				<li class="pink-item">
-					<h5><a href="#"><b>pink app</b></a></h5>
+					<h4><a href="#">pink app</a></h4>
 					<p class="about">Продуктовый лендинг<br> приложения для iOS и Android</p>
 					<p class="image">
 						<a href="#"><img src="#" width="" height="" alt="Шаблон Pink app"></a>
@@ -61,7 +61,7 @@
 					</p>
 				</li>
 				<li class="barbershop-item">
-					<h5><a href="#"><b>barbershop</b></a></h5>
+					<h4><a href="#">barbershop</a></h4>
 					<p class="about">Сайт салоны красоты.<br>Для мужчин, да</p>
 					<p class="image">
 						<a href="#"><img src="#" width="" height="" alt="Шаблон Барбершопа"></a>
@@ -71,7 +71,7 @@
 					</p>
 				</li>
 				<li class="mishka-item">
-					<h5><a href="#"><b>mishka</b></a></h5>
+					<h4><a href="#">mishka</a></h4>
 					<p class="about">Интернет-магазин<br>вязаных игрушек</p>
 					<p class="image">
 						<a href="#"><img src="#" width="" height="" alt="Шаблон интернет-магазина вязаных игрушек"></a>
@@ -81,7 +81,7 @@
 					</p>
 				</li> 				
 				<li class="aplus-item">
-					<h5><a href="#"><b>a plus</b></a></h5>
+					<h4><a href="#">a plus</a></h4>
 					<p class="about">Лендинг курсов повышения<br>квалификации</p>
 					<p class="image">
 						<a href="#"><img src="#" width="" height="" alt="Шаблон A plus"></a>
@@ -91,7 +91,7 @@
 					</p>
 				</li>
 				<li class="kvass-item">
-					<h5><a href="#"><b>a plus</b></a></h5>
+					<h4><a href="#">a plus</a></h4>
 					<p class="about">Промо-сайт производителя<br>крафтового кваса</p>
 					<p class="image">
 						<a href="#"><img src="#" width="" height="" alt="Шаблон Промо-сайта производителя крафтового кваса"></a>
@@ -103,38 +103,57 @@
 			</ul>
 		</section>
 		<ul class="pagination-list">
-			<h1 class="visiually-hidden">Делаем ссылки на сраницы каталога</h1>
+			<h2 class="visually-hidden">Ссылки на сраницы</h2>
 			<li class="pagination-item-current"><a href="#">1</a></li>
 			<li class="pagination-item"><a href="#">2</a></li>
 			<li class="pagination-item"><a href="#">3</a></li>
 			<li class="pagination-item"><a href="#">следующая</a></li>
 		</ul> <!-- не надо загонять в section? -->
 	</main>
-	<footer class="main-footer">   	
+	<footer class="main-footer">
 		<div class="map">
-			<h1 class="visiually-hidden">Добавляем карту</h1>
-			<img class="map-picture" src="#" width="" height="Contributing.md" alt="Карта c адресом Нердс">
-			<img class="marker-map"	src="#" width="" height="" alt="Маркер на карте">
+			<h2 class="visually-hidden">Карта</h2>
+			<img class="map-picture" src="#" width="" height="" alt="Карта">
 		</div>			
-			<h1 class="visiually-hidden">Добавляем контакты Nerds</h1>
-		<div class="contacts">	
-			<h5>nerds design studio</h5> 
-			<p>
-				191186, Санкт-Петербург,<br>
-				ул. Конюшенная, д. 19/8
-			</p>
+		<div class="contacts">
+			<h2 class="visually-hidden">Контакты</h2>
+			<h4>nerds design studio</h4>
+			<p>191186, Санкт-Петербург,<br>ул. Конюшенная, д. 19/8</p>
 			<p>тел. +7(812)275-75-75</p>
-			<a class="button-letter-to-nerds" href="#">напишите нам</a>
-		</div>						
+			<a class="button-letter-to-nerds" href="#">Напишите нам</a>
+		</div>
 		<div class="footer-social">
 			<ul>
 				<li><a class="button-vk" href="#">Вконтакте</a></li>
 				<li><a class="button-facebook" href="#">Фейсбук</a></li>
 				<li><a class="button-instagram" href="#">Инстаграм</a></li>
 			</ul>
-		</div class="footer-discount">
+		</div>
+		<div class="footer-discount">
 			<b>Давайте дружить, это выгодно</b>
 			<p>Скидка 10% для друзей из социальных сетей</p>
+		</div>
 	</footer>
-  </body>
+		<form class="letter-to-nerds" action="#" method="post">
+			<h2>Напишите нам</h2>
+			<span class="letter-to-nerds-close">x</span> <!-- почти уверен, что неправильно, таким образом я хотел отоброзить элемент закрытия формы? -->
+			<div class="name-email">
+				<label>
+					<b>Ваше имя:</b> 
+					<input type="text" name="login" id="login" placeholder="Имя Фамилия"> <!-- вообще нужен ли id? -->
+				</label>
+				<label>
+					<b>Ваш e-mail:</b> 	
+					<input type="email" name="email" id="email" placeholder="email@example.com"> 
+				</label>
+			</div> <!-- что в таких случаях лучше применять div или p?? -->
+			<div class="text-of-the-letter">
+				<label>
+					<b>Текст письма:</b><br>
+					<textarea name="letter" rows="4" cols="" placeholder="В свободной форме" id="letter"></textarea>
+				</label>
+			</div>
+			<a href="#">Отправить</a> <!--а можно ли такие элементы делать с помощью button? -->
+		</form>
+	</body>
 </html>
